--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">TagMatch!</string>
     <string name="action_settings">Settings</string>
+    <string name="chat_button">Xats</string>
+    <string name="search_preview">Buscar xat</string>
+    <string name="main_chat_activity_title">Xats</string>
 </resources>
