Primera versió de la interfície de la llista de xats, no està implementat encara el botó de buscar ni borrar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="chat_button">Xats</string>
     <string name="search_preview">Buscar xat</string>
     <string name="main_chat_activity_title">Xats</string>
+    <string name="empty_chat_list">No existeix cap xat encara</string>
 </resources>
