--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="main_chat_activity_title">Xats</string>
     <string name="empty_chat_list">No existeix cap xat encara</string>
     <string name="send_message">Enviar</string>
+    <string name="action_delete_chat">Esborrar xat</string>
 </resources>
