--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,17 @@
     <string name="app_name">TagMatch!</string>
     <string name="action_settings">Settings</string>
     <string name="chat_button">Xats</string>
-    <string name="search_preview">Buscar xat</string>
+    <string name="search_preview">Buscar xat…</string>
     <string name="main_chat_activity_title">Xats</string>
     <string name="empty_chat_list">No existeix cap xat encara</string>
     <string name="send_message">Enviar</string>
-    <string name="action_delete_chat">Esborrar xat</string>
+    <string name="action_send_image">Enviar imatge</string>
+    <string name="action_send_offer">Enviar oferta</string>
+    <string name="action_block_user">Bloquejar usuari</string>
+    <string name="action_delete_chat">Eliminar xat</string>
     <string name="dialog_title_delete_chat">Eliminar xat</string>
     <string name="dialog_message_delete_chat">Estàs segur de voler eliminar aquest xat?</string>
     <string name="dialog_confirm_delete_chat">Sí</string>
     <string name="dialog_cancel_delete_chat">Cancelar</string>
+    <string name="hint_single_chat">Escriu el teu missatge…</string>
 </resources>
