--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="registration_hint_mail">Correu Electrònic</string>
     <string name="registration_hint_password">Contrasenya</string>
     <string name="registration_hint_password_confirm">Confirmacíó Contrasenya</string>
+    <string name="registration_wrong_username">Ja existeix un usuari amb aquest nom d\'usuari.</string>
+    <string name="registration_wrong_password">Les dos contrasenyes no son iguals.</string>
+    <string name="registration_wrong_mail">Ja existeix un usuari amb aquest correu.</string>
 </resources>
