--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="registration_wrong_username">Ja existeix un usuari amb aquest nom d\'usuari.</string>
     <string name="registration_wrong_password">Les dos contrasenyes no son iguals.</string>
     <string name="registration_wrong_mail">Ja existeix un usuari amb aquest correu.</string>
+    <string name="ip_server">http://192.168.1.132</string>
+    <string name="title_activity_registration2">RegistrationActivity2</string>
 </resources>
