--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,5 @@
     <string name="user_password">Contrasenya</string>
     <string name="empty_pass">La contrasenya està buida</string>
     <string name="empty_user">Usuari està buit</string>
-    <string name="ip_server">192.168.1.16</string>
+    <string name="ip_server">http://192.168.1.16</string>
 </resources>
