--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,11 @@
 
     <string name="login">Login</string>
     <string name="forgotten">He oblidat la meva contrasenya</string>
-    <string name="new_user_text">Nou usuari?</string>
+    <string name="new_user_text">Nou usuari? Registrat</string>
     <string name="new_user_button">Registre</string>
     <string name="user_name">Nom usuari</string>
     <string name="user_password">Contrasenya</string>
     <string name="empty_pass">La contrasenya està buida</string>
     <string name="empty_user">Usuari està buit</string>
-    <string name="ip_server">http://192.168.1.16</string>
+    <string name="ip_server">http://192.168.1.16:8080</string>
 </resources>
