--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="ip_server">http://192.168.1.132:8080</string>
+    <string name="ip_server">http://192.168.1.129:8080</string>
     <string name="app_name">TagMatch!</string>
     <string name="action_settings">Settings</string>
     <string name="chat_button">Xats</string>
@@ -26,5 +26,7 @@
     <string name="registration_login">Ja ets membre? Inicia Sessió</string>
     <string name="registration_wrong_mail_match">Fica un correu correcte</string>
     <string name="registration_wrong_username_void">El camp d\'usuari no pot estar vuit</string>
+    <string name="registration_profile_foto">Foto de perfil</string>
+    <string name="registration_default_sell_location">Des d\'on vols vendre per defecte?</string>
 
 </resources>
