--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="ip_server">http://192.168.1.129:8080</string>
+    <string name="ip_server">https://tagmatch.herokuapp.com</string>
     <string name="ip_server2">http://192.168.1.16:8080</string>
     <string name="app_name">TagMatch!</string>
     <string name="action_settings">Settings</string>
