--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,19 @@
 <resources>
+    <!-- Manifest -->
     <string name="app_name">TagMatch!</string>
+    <string name="title_activity_new_advertisement">NewAdvertisement</string>
+    <string name="title_activity_view_profile">ViewProfile</string>
+    <string name="title_activity_view_chat">ViewChat</string>
+
+    <!-- Manifest -->
+    <string name="nav_newAdvert">New Advertisement</string>
+    <string name="nav_logout">Logout</string>
+    <string name="nav_settings">Settings</string>
+    <string name="nav_mainPage">Main Page</string>
+    <string name="nav_viewUser">View User</string>
+    <string name="nav_xats">Xats </string>
+
+    <!-- Desordere total -->
     <string name="action_settings">Settings</string>
     <string name="chat_button">Xats</string>
     <string name="search_preview">Buscar xat…</string>
@@ -46,7 +60,6 @@
 
     <string name="error_login">Usuari o contrasenya incorrectes</string>
 
-    <string name="title_activity_new_advertisement">NewAdvertisement</string>
 
     <!-- New Advertisement -->
     <string name="input_title">Títol de l\'anunci</string>
@@ -67,5 +80,8 @@
     <string name="ok">Entesos</string>
     <string name="emptyPrice">Si el vols vendre, has de posar un preu, si no, regala\'l!</string>
     <string name="zeroPrice">El preu ha de ser més gran que 0 si vols vendre, si no, regala\'l!</string>
+    <!-- Navigation Drawer -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 
 </resources>
