--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="nav_mainPage">Main Page</string>
     <string name="nav_viewUser">View User</string>
     <string name="nav_xats">Xats </string>
+    <string name="nav_viewAdvert">View Advertisement </string>
 
     <!-- Desordere total -->
     <string name="action_settings">Settings</string>
@@ -83,5 +84,6 @@
     <!-- Navigation Drawer -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_view_advert">ViewAdvert</string>
 
 </resources>
