--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_view_advert">ViewAdvert</string>
 
+    <!-- Profile -->
+    <string name="profile_button_advertisement">Anuncis</string>
+
 </resources>
