--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="nav_mainPage">Main Page</string>
     <string name="nav_viewUser">View User</string>
     <string name="nav_myAdverts">My Adverts</string>
-    <string name="nav_xats">Xats </string>
+    <string name="nav_xats">Chats </string>
     <string name="nav_viewAdvert">View Advertisement </string>
 
     <!-- Desordere total -->
