--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,83 +14,83 @@
     <string name="nav_mainPage">Main Page</string>
     <string name="nav_viewUser">View User</string>
     <string name="nav_myAdverts">My Adverts</string>
-    <string name="nav_xats">Chats </string>
+    <string name="nav_xats">Chats</string>
     <string name="nav_viewAdvert">View Advertisement </string>
 
     <!-- Desordere total -->
     <string name="action_settings">Settings</string>
-    <string name="chat_button">Xats</string>
-    <string name="search_preview">Buscar xat…</string>
-    <string name="main_chat_activity_title">Xats</string>
-    <string name="empty_chat_list">No existeix cap xat encara</string>
-    <string name="send_message">Enviar</string>
-    <string name="action_send_image">Enviar imatge</string>
-    <string name="action_send_offer">Enviar oferta</string>
-    <string name="action_block_user">Bloquejar usuari</string>
-    <string name="action_delete_chat">Eliminar xat</string>
-    <string name="dialog_title_delete_chat">Eliminar xat</string>
-    <string name="dialog_message_delete_chat">Estàs segur de voler eliminar aquest xat?</string>
-    <string name="dialog_confirm_delete_chat">Sí</string>
-    <string name="dialog_cancel_delete_chat">Cancelar</string>
-    <string name="registration_title">Registre</string>
-    <string name="registration_button">Envia</string>
-    <string name="registration_hint_username">Usuari</string>
-    <string name="registration_hint_mail">Correu Electrònic</string>
-    <string name="registration_hint_password">Contrasenya</string>
-    <string name="registration_hint_password_confirm">Confirmacíó Contrasenya</string>
-    <string name="registration_wrong_username">Ja existeix un usuari amb aquest nom d\'usuari.</string>
-    <string name="registration_wrong_password_missmatch">Les dos contrasenyes no son iguals.</string>
-    <string name="registration_wrong_mail">Ja existeix un usuari amb aquest correu.</string>
-    <string name="registration_search_button">Buscar Foto</string>
-    <string name="registration_end_registrer">Finalitzar</string>
-    <string name="registration_login">Ja ets membre? Inicia Sessió</string>
-    <string name="registration_wrong_mail_match">Fica un correu correcte</string>
-    <string name="registration_wrong_username_void">El camp d\'usuari no pot estar vuit</string>
-    <string name="registration_profile_foto">Foto de perfil</string>
-    <string name="registration_default_sell_location">Des d\'on vols vendre per defecte?</string>
-    <string name="no_network_connection">No hi ha connexió a internet</string>
-    <string name="connection_timeout">No ha sigut possible conectarse amb el servidor</string>
-    <string name="hint_single_chat">Escriu el teu missatge…</string>
+    <string name="chat_button">Chats</string>
+    <string name="search_preview">Find chat…</string>
+    <string name="main_chat_activity_title">Chats</string>
+    <string name="empty_chat_list">You have no chats yet</string>
+    <string name="send_message">Send</string>
+    <string name="action_send_image">Send image</string>
+    <string name="action_send_offer">Send offer</string>
+    <string name="action_block_user">Block user</string>
+    <string name="action_delete_chat">Delete chat</string>
+    <string name="dialog_title_delete_chat">Delete chat</string>
+    <string name="dialog_message_delete_chat">Are you sure you want to delete a chat?</string>
+    <string name="dialog_confirm_delete_chat">Yes</string>
+    <string name="dialog_cancel_delete_chat">Cancel</string>
+    <string name="registration_title">Registration</string>
+    <string name="registration_button">Send</string>
+    <string name="registration_hint_username">User</string>
+    <string name="registration_hint_mail">Email</string>
+    <string name="registration_hint_password">Password</string>
+    <string name="registration_hint_password_confirm">Password confirmation</string>
+    <string name="registration_wrong_username">This username already exists.</string>
+    <string name="registration_wrong_password_missmatch">The password is not the same.</string>
+    <string name="registration_wrong_mail">This email already exists.</string>
+    <string name="registration_search_button">Find photo</string>
+    <string name="registration_end_registrer">Finalize</string>
+    <string name="registration_login">Already a member? Log in</string>
+    <string name="registration_wrong_mail_match">Put a correct email</string>
+    <string name="registration_wrong_username_void">User can\'t be empty</string>
+    <string name="registration_profile_foto">Profile photo</string>
+    <string name="registration_default_sell_location">Where is your location?</string>
+    <string name="no_network_connection">No connection to network</string>
+    <string name="connection_timeout">Connection timeout</string>
+    <string name="hint_single_chat">Write your message…</string>
     <string name="hint_loading_adverts">Loading advertisements from server, please wait</string>
     <string name="hint_no_adverts">You don\'t have any advert, create one!</string>
 
     <!-- Login -->
     <string name="login">Login</string>
-    <string name="forgotten">He oblidat la meva contrasenya</string>
-    <string name="new_user_text">Nou usuari? Registrat</string>
-    <string name="new_user_button">Registre</string>
-    <string name="user_name">Nom usuari</string>
-    <string name="user_password">Contrasenya</string>
-    <string name="empty_pass">La contrasenya està buida</string>
-    <string name="empty_user">Usuari està buit</string>
+    <string name="forgotten">I forgot my password</string>
+    <string name="new_user_text">New user? Sing up</string>
+    <string name="new_user_button">Sing up</string>
+    <string name="user_name">User name</string>
+    <string name="user_password">Password</string>
+    <string name="empty_pass">The password is empty</string>
+    <string name="empty_user">The user is empty</string>
 
-    <string name="error_login">Usuari o contrasenya incorrectes</string>
+    <string name="error_login">User or password incorrect</string>
 
 
     <!-- New Advertisement -->
-    <string name="input_title">Títol de l\'anunci</string>
-    <string name="input_description">Descripció de l\'anunci</string>
-    <string name="input_hashtags">Hashtags descriptius</string>
-    <string name="input_wantedHashtags">Hashtags del que vols a canvi</string>
-    <string name="input_price">Preu</string>
-    <string name="input_gift">Gràcies per la teva doncaió!</string>
-    <string name="but_new_advert">Crea</string>
-    <string name="noTitle">Introdueix un títol siusplau</string>
-    <string name="noDescription">Introdueix una descripció siusplau</string>
-    <string name="noTag">Introdueix un tag com a mínim siusplau</string>
-    <string name="imagePickTitle">Afegeix una imatge</string>
-    <string name="imagePickText">D\'on vols seleccionar la imatge?</string>
-    <string name="imagePickCamera">De la Càmera</string>
-    <string name="imagePickGallery">De la Galeria</string>
-    <string name="title_error_newAdvert">Falta algun camp</string>
-    <string name="ok">Entesos</string>
-    <string name="emptyPrice">Si el vols vendre, has de posar un preu, si no, regala\'l!</string>
-    <string name="zeroPrice">El preu ha de ser més gran que 0 si vols vendre, si no, regala\'l!</string>
+    <string name="input_title">Title</string>
+    <string name="input_description">Description</string>
+    <string name="input_hashtags">Hashtags</string>
+    <string name="input_wantedHashtags">Hashtags what you want to trade</string>
+    <string name="input_price">Price</string>
+    <string name="input_gift">Thanks for your donation!</string>
+    <string name="but_new_advert">Create</string>
+    <string name="noTitle">Insert a title</string>
+    <string name="noDescription">Insert a description</string>
+    <string name="noTag">Insert a hastag</string>
+    <string name="imagePickTitle">Insert an image</string>
+    <string name="imagePickText">Where do you want to pick the image?</string>
+    <string name="imagePickCamera">From camera</string>
+    <string name="imagePickGallery">From gallery</string>
+    <string name="title_error_newAdvert">Some fields empty</string>
+    <string name="ok">Okay</string>
+    <string name="emptyPrice">The price is empty</string>
+    <string name="zeroPrice">The price has to be bigger than zero</string>
     <!-- Navigation Drawer -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <!-- Profile -->
-    <string name="profile_button_advertisement">Anuncis</string>
+    <string name="profile_button_advertisement">Advertisements</string>
 
 </resources>
