"Canviar el botó de chat pel correcte, afegit menu_options a veure adv amb la opcio de borrar el  adv si es tracta del propi adv, ara al entrar al view_adv es sap si es pròpia o d'un altre usuari." View Adv: la valoracio passa a ser el nom de la ciutat

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,15 @@
     <!-- Profile -->
     <string name="profile_button_advertisement">Advertisements</string>
 
+    <!-- View Adv -->
+    <string name="action_open_chat">Open chat</string>
+    <string name="action_tagmatch">Tagmatch!</string>
+    <string name="action_edit_adv">Edit advertisement</string>
+    <string name="action_delete_adv">Delete advertisement</string>
+
+    <string name="dialog_title_delete_adv">Delete advertisement</string>
+    <string name="dialog_message_delete_adv">Are you sure you want to delete this advertisement?</string>
+    <string name="dialog_confirm_delete_adv">Yes</string>
+    <string name="dialog_cancel_delete_adv">Cancel</string>
+
 </resources>
