--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,5 +112,6 @@
     <string name="dialog_message_delete_adv">Are you sure you want to delete this advertisement?</string>
     <string name="dialog_confirm_delete_adv">Yes</string>
     <string name="dialog_cancel_delete_adv">Cancel</string>
+    <string name="wait_chat">Wait, setting up the chat</string>
 
 </resources>
