--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,8 @@
     <string name="hashtags_title">Hashtags:</string>
     <string name="about_user">About the seller</string>
     <string name="user_loc">User location:&#160;</string>
+    <string name="title_activity_edit_profile">EditProfile</string>
+    <string name="edit_profile_interests">Interests</string>
 
 
 </resources>
