--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,5 +122,29 @@
     <string name="about_user">About the seller</string>
     <string name="user_loc">User location:&#160;</string>
 
+    <!-- Chat Offer -->
+    <string name="dialog_title_send_offer">Send offer</string>
+    <string name="dialog_select_offer">Select offer:</string>
+    <string name="dialog_information_offer">Set the offer:</string>
+    <string name="dialog_money_information_offer">enter a € quantity</string>
+    <string name="dialog_product_information_offer">enter a product</string>
+    <string name="dialog_other_information_offer">enter a some commentary</string>
+    <string name="dialog_error_send_offer_no_offer">You have to select an offer</string>
+    <string name="dialog_error_send_offer_no_information">You have to set the offer</string>
+    <string name="dialog_confirm_send_offer">Confirm</string>
+    <string name="dialog_cancel_send_offer">Cancel</string>
+    <string name="pending_offer">This offer is still pending</string>
+    <string name="confirm_offer">Confirm</string>
+    <string name="deny_offer">Deny</string>
+
+    <string name="dialog_title_deny_offer">Deny offer</string>
+    <string name="dialog_message_deny_offer">Are you sure do you want to deny this offer?</string>
+    <string name="dialog_confirm_deny_offer">Deny</string>
+    <string name="dialog_cancel_deny_offer">No</string>
+
+    <string name="dialog_title_accept_offer">Accept offer</string>
+    <string name="dialog_message_accept_offer">Are you sure do you want to accept this offer?</string>
+    <string name="dialog_confirm_accept_offer">Accept</string>
+    <string name="dialog_cancel_accept_offer">No</string>
 
 </resources>
