Afegit la notificacio des de main chats que hi ha una oferta per a un intercanvi, els chats referent al meu anunci surten resaltats, afegit la implementacio de missatges per llegir des de els main chats

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,7 @@
     <string name="dialog_confirm_accept_offer">Accept</string>
     <string name="dialog_cancel_accept_offer">No</string>
 
+    <string name="mainchat_new_offer">Offer!</string>
+    <string name="mainchat_pending_offer">Pending</string>
+
 </resources>
