Sugerencias en todas partes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,16 +79,19 @@
     <string name="noTitle">Insert a title</string>
     <string name="noDescription">Insert a description</string>
     <string name="noTag">Insert a hastag</string>
+    <string name="noExTag">Insert a wanted hastag</string>
     <string name="imagePickTitle">Insert an image</string>
-    <string name="imagePickText">Where do you want to pick the image?</string>
+    <string name="imagePickText">Where do you want to pick the image from?</string>
     <string name="imagePickCamera">From camera</string>
     <string name="imagePickGallery">From gallery</string>
     <string name="title_error_newAdvert">Some fields empty</string>
     <string name="ok">Okay</string>
     <string name="emptyPrice">The price is empty</string>
-    <string name="zeroPrice">The price has to be bigger than zero</string>
+    <string name="zeroPrice">The price has to be greater than zero</string>
     <string name="new_photo">Add image</string>
     <string name="new_ad_general_title">New advert</string>
+    <string name="cat_adv">Ad\'s category</string>
+    <string name="type_ad">Ad\'s type</string>
 
     <!-- Navigation Drawer -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -113,6 +116,7 @@
     <string name="negative_button">No</string>
     <string name="succ_delete">Hashtag succesfully deleted</string>
     <string name="edit_activity_title">Search</string>
+    <string name="hash_filter">Hashtags to search</string>
 
     <!-- View Adv -->
     <string name="action_open_chat">Open chat</string>
@@ -130,7 +134,7 @@
     <string name="hashtags_title">Hashtags:</string>
     <string name="about_user">About the seller</string>
     <string name="user_loc">User location:&#160;</string>
-    <string name="title_activity_edit_profile">EditProfile</string>
+    <!--<string name="title_activity_edit_profile">EditProfile</string>-->
     <string name="edit_profile_interests">Interests</string>
 
 
