--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,7 +106,7 @@
     <string name="profile_button_advertisement">Advertisements</string>
 
     <!-- View Adv -->
-    <string name="action_open_chat">Open chat</string>
+    <string name="action_report">Report</string>
     <string name="action_tagmatch">Tagmatch!</string>
     <string name="action_edit_adv">Edit advertisement</string>
     <string name="action_delete_adv">Delete advertisement</string>
