--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,7 +125,8 @@
     <string name="action_tagmatch">Tagmatch!</string>
     <string name="action_edit_adv">Edit advertisement</string>
     <string name="action_delete_adv">Delete advertisement</string>
-    <string name="added_fav">Advert addes as FAV</string>
+    <string name="added_fav">Advert added as FAV</string>
+    <string name="erased_fav">Advert erased as FAV</string>
 
     <string name="dialog_title_delete_adv">Delete advertisement</string>
     <string name="dialog_message_delete_adv">Are you sure you want to delete this advertisement?</string>
