--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,14 +150,23 @@
     <string name="dialog_error_send_offer_no_information">You have to set the offer</string>
     <string name="dialog_confirm_send_offer">Confirm</string>
     <string name="dialog_cancel_send_offer">Cancel</string>
+
+    <string name="dialog_title_rate_deal">Rate deal</string>
+
     <string name="pending_offer">This offer is still pending</string>
     <string name="confirm_offer">Confirm</string>
     <string name="deny_offer">Deny</string>
+    <string name="rate_offer">Rate the deal!</string>
 
     <string name="dialog_title_deny_offer">Deny offer</string>
     <string name="dialog_message_deny_offer">Are you sure do you want to deny this offer?</string>
     <string name="dialog_confirm_deny_offer">Deny</string>
     <string name="dialog_cancel_deny_offer">No</string>
+
+    <string name="dialog_title_not_rate_deal">Rate deal</string>
+    <string name="dialog_message_not_rate_deal">Are you sure do you not want to rate this deal?</string>
+    <string name="dialog_confirm_not_rate_deal">No, thanks</string>
+    <string name="dialog_cancel_not_rate_deal">Rate</string>
 
     <string name="dialog_title_accept_offer">Accept offer</string>
     <string name="dialog_message_accept_offer">Are you sure do you want to accept this offer?</string>
