--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,6 +206,12 @@
 
     <!-- Settings -->
     <string name="password_change">Change Password</string>
+
+    <!-- Password Change -->
     <string name="title_activity_password_change">PasswordChange</string>
+    <string name="change_password_hint_old_password">Old Password</string>
+    <string name="change_password_hint_new_password">New Password</string>
+    <string name="change_password_hint_repite_new_password">Repite Password</string>
+    <string name="password_change_error_password_empty">Fields cannot be empty</string>
 
 </resources>
